<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F9FBE7">

    <ImageView
        android:id="@+id/rhymetime_picture"
        android:layout_width="160dp"
        android:layout_height="250dp"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="12dp"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/rhymetime"/>

    <TextView
        android:id="@+id/business_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/rhymetime_picture"
        android:text="@string/business_name"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="6dp"
        android:fontFamily="@font/alittlesunshine"
        android:textSize="34sp"
        android:textColor="@color/colorPrimary"/>

    <TextView
        android:id="@+id/age_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/rhymetime_picture"
        android:layout_below="@id/business_name"
        android:text="@string/age_group_description"
        android:layout_marginTop="6dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="12dp"
        android:textSize="16sp"
        android:textColor="@color/colorAccent"/>

    <TextView
        android:id="@+id/class_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/rhymetime_picture"
        android:layout_below="@id/age_group"
        android:text="@string/class_description"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="12dp"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/contact_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rhymetime_picture"
        android:text="@string/contact_name"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="4dp"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/contact_name"
        android:text="@string/email"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="4dp"
        android:textSize="14sp"
        android:autoLink="email"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:text="@string/address"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="4dp"
        android:textSize="14sp" />

    <com.google.android.gms.maps.MapView
        android:id="@+id/map_view"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_below="@+id/class_description"
        android:layout_alignParentRight="true">

    </com.google.android.gms.maps.MapView>

</RelativeLayout>